--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^4.22.1",
     "axios": "^0.27.2",
+    "js-cookie": "^3.0.1",
     "json-server": "^0.17.0",
     "react": "^17.0.2",
     "react-cookie": "^4.1.1",
